# expedia_challenge

./: .gitignore  .pre-commit-config.yaml  README.md  Report.md  first_setup  pyproject.toml
notebooks/: 0. eda.ipynb  1. preprocessing.ipynb  2. initial model.ipynb  bq_to_pandas.ipynb
