[tool.poetry]
name = "expedia_challenge"
version = "0.1.0"
description = ""
authors = ["Hamzah Iqbal <10302415+hamzahiqb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
modin = "^0.10.0"
Bottleneck = "^1.3.2"
matplotlib = "^3.4.2"
numexpr = "^2.7.3"
numpy = "1.19.5"
pandas = "<=1.2.4"
pandas-profiling = {extras = ["notebook"], version = "^3.0.0"}
plotly = "^5.1.0"
scipy = "<=1.5.4"
seaborn = "^0.11.1"
statsmodels = "^0.12.2"
scikit-learn = "^0.24.2"
imbalanced-learn = "^0.8.0"
lightgbm = "^3.2.1"

[tool.poetry.dev-dependencies]
aquirdturtle-collapsible-headings = "^3.1.0"
black = "^21.6b0"
dask-labextension = "^5.0.2"
ipywidgets = "^7.6.3"
isort = "^5.9.1"
jupyter-dash = "^0.4.0"
jupyterlab = "^3.0.16"
jupyterlab-git = "^0.30.1"
jupyterlab-code-formatter = "^1.4.10"
jupyterlab-widgets = "^1.0.0"
jupyterlab-system-monitor = "^0.8.0"
jupytext = "^1.11.3"
pre-commit = "^2.13.0"
rise = "^5.7.1"
tqdm = "^4.61.2"
watermark = "^2.2.0"
xeus-python = "^0.12.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
